# Pawa-Ai

./: .dockerignore  .gitignore  ACTIVATE_NOW.md  ADVANCED_FEATURES_ROADMAP.md  AI_AGENT_FIX.md  ALL_UX_FIXES_COMPLETE.md  ALTERNATIVE_DEPLOY.md  ARCHITECTURE.md  AUTHENTICATION_COMPLETE.md  AUTOMATION_SETUP.md  BACKEND_API_DOCUMENTATION.md  BIOLOGY_COMPLETE_GUIDE.md  BUILD_YOUR_OWN_MODEL.md  CHEMISTRY_COMPLETE_GUIDE.md  CLAUDE_API_SETUP.md  CLAUDE_PARITY_FEATURES.md  CLEAN_SIMPLE_INTERFACE.md  CLEAR_VSCODE_CACHE_AND_INSTALL.bat  CLOUD_TRAINING_GUIDE.md  COLAB_TEMPLATE.py  COLAB_WITH_REAL_MODEL.py  COMMERCIALIZATION_ROADMAP.md  COMPLETE_FEATURE_SUMMARY.md  COMPLETE_GITHUB_SETUP.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_WITH_VISION.md  COMPOSITION_WRITING_GUIDE.md  CREATE_DESKTOP_SHORTCUT.bat  CRE_FORM_3_MESSIAH_GUIDE.md  CUSTOM_MODEL_INTEGRATION_GUIDE.md  DEMO_INSTRUCTIONS.md  DEPLOY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_RENDER.ps1  EASY_COLAB_SETUP.md  ENGLISH_COMPLETE_GUIDE.md  EXTENSION_FIXED_INSTALL_NOW.md  EXTENSION_INSTALLED_SUCCESS.md  (+118 more)
backend/: .env.example  .env.intelligence  .gitignore  Dockerfile  Dockerfile.advanced  Dockerfile.demo  Dockerfile.humanlike  Dockerfile.intelligent  Dockerfile.local  Dockerfile.truly_intelligent  Dockerfile.ultimate  Dockerfile.ultimate-fast  Procfile  activate_gemini.bat  advanced_server.py  ai_agent_tools.py  ai_code_agent_api.py  ai_code_agent_api.py.backup  ai_code_review.py  ai_model_selection.py  ask_model.py  auth_db.py  auth_routes.py  build_world_class_ai.py  claude_api_integration.py  code_editor_api.py  codebase_intelligence.py  compare_models.py  conversation_memory.py  enhanced_groq_endpoint.py  fly.toml  gemini_api_integration.py  genius_ai.db  human_like_ai.py  pyproject.toml  (+31 more)
(+102 files in other folders)
