[tool.poetry]
name = "genius-ai"
version = "0.1.0"
description = "Advanced conversational AI system with multi-agent reasoning and continuous learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "genius_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"
transformers = "^4.36.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
chromadb = "^0.4.22"
sentence-transformers = "^2.2.2"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
redis = "^5.0.1"
tiktoken = "^0.5.2"
openai = "^1.6.1"
anthropic = "^0.8.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.26.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
tenacity = "^8.2.3"
peft = "^0.7.1"
bitsandbytes = "^0.41.3"
accelerate = "^0.25.0"
datasets = "^2.16.1"
evaluate = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.19.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
